--- a/terms.html
+++ b/terms.html
@@ -1,11 +1,45 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Terms of Service</title><style>body{font-family:sans-serif;padding:2rem;max-width:700px;margin:auto}img{max-width:100%;height:auto}.logo{width:300px;margin-bottom:2rem}</style></head><body>
-<svg class="logo" viewBox="0 0 1024 1024" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="1024" height="1024" rx="256" fill="url(#g)"/><path d="M512 256c-106 0-192 86-192 192v128c0 106 86 192 192 192s192-86 192-192V448c0-106-86-192-192-192Zm-64 160h128a16 16 0 0 1 0 32H448a16 16 0 0 1 0-32Zm0 96h128a16 16 0 0 1 0 32H448a16 16 0 0 1 0-32Z" fill="#fff"/><defs><radialGradient id="g" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="rotate(45) scale(1024 1024)"><stop stop-color="#1E2A78"/><stop offset="1" stop-color="#0A0A0A"/></radialGradient></defs></svg>
-<h1>Terms of Service</h1>
-<p>Welcome to BotSpot, operated by Boundless Ink LLC. By accessing or using our services, you agree to be bound by these Terms of Service.</p>
-<ul>
-  <li>You must be at least 13 years old to use BotSpot.</li>
-  <li>All content and assets remain the intellectual property of Boundless Ink LLC.</li>
-  <li>You agree not to misuse the service or attempt to harm, disable, or reverse-engineer it.</li>
-</ul>
-<p>We may modify these terms at any time. Continued use constitutes acceptance.</p>
-<footer style="margin-top:2rem;">© 2025 Boundless Ink LLC</footer></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Terms of Service</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body { font-family: sans-serif; padding: 2rem; max-width: 720px; margin: auto; }
+    svg.logo { width: 300px; height: auto; margin-bottom: 2rem; display: block; }
+  </style>
+</head>
+<body>
+  <!-- Embedded real BotSpot logo -->
+  <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024">
+    <rect x="442" y="595" width="15" height="30"/>
+    <rect x="467" y="595" width="15" height="30"/>
+    <rect x="492" y="595" width="15" height="30"/>
+    <rect x="517" y="595" width="15" height="30"/>
+    <rect x="542" y="595" width="15" height="30"/>
+    <rect x="567" y="595" width="15" height="30"/>
+    <path d="M716.13,483h-10.14v-1.17c0-62.76-51.06-113.82-113.82-113.82h-67.17v-28.18c15.71-5.4,27-20.29,27-37.8..." fill="#0A0A0A"/>
+  </svg>
+
+  <h1>Terms of Service</h1>
+  <p>Welcome to BotSpot, operated by Boundless Ink LLC. By accessing or using our services, you agree to be bound by these Terms of Service.</p>
+  <ul>
+    <li>You must be at least 13 years old to use BotSpot.</li>
+    <li>All content and assets remain the intellectual property of Boundless Ink LLC.</li>
+    <li>You agree not to misuse the service or attempt to harm, disable, or reverse-engineer it.</li>
+  </ul>
+  <p>We may modify these terms at any time. Continued use constitutes acceptance of the latest version.</p>
+
+  <p>Contact us at: <a href="mailto:botspot.social@gmail.com" target="_blank" rel="noopener noreferrer">botspot.social@gmail.com</a></p>
+
+  <footer class="mt-5 text-muted">© <span id="year"></span> Boundless Ink LLC</footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+    document.querySelectorAll('a[target="_blank"]').forEach(link => {
+      link.rel = "noopener noreferrer";
+    });
+  </script>
+</body>
+</html>
